Add DetailsViewController and direct pass value into element

--- a/product/product/Base.lproj/Main.storyboard
+++ b/product/product/Base.lproj/Main.storyboard
@@ -155,10 +155,10 @@
             </objects>
             <point key="canvasLocation" x="1983.2" y="138.0809595202399"/>
         </scene>
-        <!--View Controller-->
+        <!--Details View Controller-->
         <scene sceneID="0AQ-MV-Bl9">
             <objects>
-                <viewController id="dpT-Jf-ji4" sceneMemberID="viewController">
+                <viewController id="dpT-Jf-ji4" customClass="DetailsViewController" customModule="product" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="nei-aP-uPi"/>
                         <viewControllerLayoutGuide type="bottom" id="B6K-yr-0ab"/>
@@ -166,8 +166,20 @@
                     <view key="view" contentMode="scaleToFill" id="Tc8-EF-Zdr">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vNI-mM-hMw">
+                                <frame key="frameInset" minX="163" minY="454" width="103" height="23"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <connections>
+                        <outlet property="detailsLabel" destination="vNI-mM-hMw" id="0OQ-6V-TJt"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xMY-1b-lyo" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
